# BRPWR-HGSADC-SBC

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  large.sh  process.ipynb  prop.sh  run.sh  runall.sh  small.sh
Instances/10_1/: BCRF_2.txt  dissat_table_1.txt  dissat_table_10.txt  dissat_table_4.txt  linear_diss_10.txt  linear_diss_8.txt  station_info_10.txt  time_matrix_10.txt
Instances/10_2/: BCRFR_4.txt  BCRFR_8.txt  BCRF_7.txt  BCRF_8.txt  dissat_table_1.txt  dissat_table_5.txt  dissat_table_6.txt  dissat_table_7.txt  linear_diss_2.txt  linear_diss_3.txt  linear_diss_5.txt  linear_diss_9.txt  station_info_10.txt  time_matrix_10.txt
Instances/10_3/: BCRFR_6.txt  BCRFR_7.txt  BCRF_10.txt  BCRF_4.txt  BCRF_8.txt  BCRF_9.txt  dissat_table_6.txt  dissat_table_9.txt  linear_diss_2.txt  linear_diss_6.txt  station_info_10.txt  time_matrix_10.txt
Instances/10_4/: BCRFR_2.txt  BCRFR_4.txt  BCRF_1.txt  BCRF_5.txt  BCRF_9.txt  dissat_table_3.txt  dissat_table_6.txt  linear_diss_1.txt  linear_diss_10.txt  linear_diss_3.txt  linear_diss_4.txt  linear_diss_5.txt  linear_diss_6.txt  station_info_10.txt  time_matrix_10.txt
Instances/10_5/: BCRFR_10.txt  BCRFR_5.txt  BCRFR_6.txt  BCRF_6.txt  BCRF_7.txt  dissat_table_9.txt  station_info_10.txt  time_matrix_10.txt
Instances/120_1/: BCRFR_1.txt  BCRFR_101.txt  BCRFR_102.txt  BCRFR_104.txt  (+120 more)
Program/: Genetic.cpp  Genetic.h  Individual.cpp  Individual.h  Instance.cpp  Instance.h  LocalSearch.cpp  LocalSearch.h  Params.cpp  Params.h  Population.cpp  Population.h  RepositionScheme.h  Station.h  main.cpp
(+1974 files in other folders)
